--- a/private/css/components/_header.scss
+++ b/private/css/components/_header.scss
@@ -1,3 +1,7 @@
 header {
     
+    .left-block-icon-img{
+        background-image: url("/images/logo-HPF.svg");
+        max-width: 7.5em;
+    }
 }
