--- a/private/css/core/_typography.scss
+++ b/private/css/core/_typography.scss
@@ -2,6 +2,10 @@
     margin: 0;
     padding: 0;
     font-family: 'Raleway', sans-serif;
+}
+
+* {
+    font-family: 'Open Sans', sans-serif;
 } 
 
 hr {
@@ -23,5 +27,6 @@ hr {
         display: none !important;
     }
 }
+
 
 
