--- a/private/css/components/_header.scss
+++ b/private/css/components/_header.scss
@@ -1,7 +1,16 @@
 header {
+
+    @media (min-width: 880px) {
+        min-width:880px;
+        max-width:1280px;
+        margin: 0 auto;
+    }
+
     
     .left-block-icon-img{
         background-image: url("/images/logo-HPF.svg");
         max-width: 7.5em;
+        height: 77px;
+        background-size:cover;
     }
 }
