--- a/private/css/components/_header.scss
+++ b/private/css/components/_header.scss
@@ -1,87 +1,107 @@
 header {
+    display:block;
+    min-width:$desktop;
+    max-width:1280px;
+    margin: 0 auto;
+
+    @media (max-width: $desktop) {
         display:block;
-        min-width:$desktop;
-        max-width:1280px;
+        max-width:$desktop;
+        min-width:350px;
         margin: 0 auto;
-
-        @media (max-width: $desktop) {
-            display:block;
-            max-width:$desktop;
-            min-width:350px;
-            margin: 0 auto;
-        }
-}
+    }
 
 
-.top-bar-wrapper {
-    max-height:125px;
-    padding:1.5em;
-   
-    .top-content-dock {
-        position:relative;
-        
-        .logo {
-            display:inline-block;
-            background-image: url("/images/logo-HPF.svg");
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            height:77px;
-            width:120px;
+
+    .top-bar-wrapper {
+        max-height:125px;
+        padding:1.5em;
+    
+        .top-content-dock {
+            position:relative;
             
-        }
-
-        h4 {
-            position:absolute;
-            bottom:0;
-            left: calc(125px + 1.6em);
-            font-weight: 600;
-            font-style: italic;
-            color: #588d32;
-            font-size: 1.4em;
-            letter-spacing: -0.02em;
-            line-height: 1
-        }
-
-        .account-buttons {
-            position:absolute;
-            right:2.0em;
-            top:2.5em;
-            bottom:0;
-            height:125px;
-
-            li {
+            .logo {
                 display:inline-block;
+                background-image: url("/images/logo-HPF.svg");
+                background-size: cover;
+                background-position: center;
+                background-repeat: no-repeat;
+                height:77px;
+                width:120px;
+                
             }
 
-                .button {
-                    text-align: center;
-                    line-height: 1;
-                    cursor: pointer;
-                    vertical-align: middle;
-                    border: 1px solid transparent;
-                    border-radius: .25rem;
-                    padding: 1.5em 2em 1.6em;
-                    margin: 0 0 1.5rem 0;
-                    font-size: 0.75em;
-                    background-color: #588d32;
-                    color: #fff;
-                }
-          }
-    } //Top content dock
+            h4 {
+                position:absolute;
+                bottom:0;
+                left: calc(125px + 1.6em);
+                font-weight: 600;
+                font-style: italic;
+                color: #588d32;
+                font-size: 1.4em;
+                letter-spacing: -0.02em;
+                line-height: 1
+            }
 
-    .navi-bar-wrapper {
-        
-        .navi-bar-dock {
+            .account-buttons {
+                position:absolute;
+                right:2.0em;
+                top:2.5em;
+                bottom:0;
+                height:125px;
 
-            .navi-bar-items {
-                
                 li {
                     display:inline-block;
                 }
+
+                    .button {
+                        text-align: center;
+                        line-height: 1;
+                        cursor: pointer;
+                        vertical-align: middle;
+                        border: 1px solid transparent;
+                        border-radius: .25rem;
+                        padding: 1.5em 2em 1.6em;
+                        margin: 0 0 1.5rem 0;
+                        font-size: 0.75em;
+                        background-color: #588d32;
+                        color: #fff;
+                    }
+
+                    .button-secondary {
+                        text-align: center;
+                        line-height: 1;
+                        cursor: pointer;
+                        vertical-align: middle;
+                        border: 1px solid transparent;
+                        border-radius: .25rem;
+                        padding: 1.5em 2em 1.6em;
+                        margin: 0 0 1.5rem 0;
+                        font-size: 0.75em;
+                        background-color: #89ac62;
+                        color: #fff;
+                    }
             }
+        } 
+        
+    }//Top content dock
+
+    .navi-bar-wrapper {
+        
+        .navi-bar-dock {}
+
+        .navi-bar-items {
+            height:54px;
         }
+                
+        li {
+            display:inline-block;
+            padding: 1.25rem 1.25rem;
+            font-size: 0.775em;
+            line-height: 1;
+            color: #333;           
+        }
+
     }
 
-} //Top bar wrapper
-
+}
