--- a/private/css/components/_header.scss
+++ b/private/css/components/_header.scss
@@ -33,8 +33,8 @@ header {
 
             h4 {
                 position:absolute;
-                bottom:0;
-                left: calc(125px + 1.6em);
+                bottom:5px;
+                left: calc(125px + 0.6em);
                 font-weight: 600;
                 font-style: italic;
                 color: #588d32;
@@ -105,12 +105,31 @@ header {
 
         .right-cart-dock {
             position:absolute;
+            top:1em;
+            right:0.25em;
             padding-right: 2.75em;
             padding-bottom: 1.7em;
             font-size: 0.75em;
             letter-spacing: 0.2em;
             text-transform: uppercase;
-            line-height: 1.2em
+            line-height: 1.2em;
+            color:#666;
         }
+
+        p, i, .cart-tally {
+            display:inline-block;
+            padding-top:10px;
+        }
+
+        p {
+            transform: translateY(-20%);
+        }
+
+        i {
+            font-size:1.3em;
+            
+        }
+
+        
     }
 }
