--- a/private/css/pages/_index.scss
+++ b/private/css/pages/_index.scss
@@ -5,21 +5,42 @@
 }
 
 .carousel-dock {
-    height:100%;
+    height:37.5em;
 
     .first-slide {
-        background-image: url('/images/Carousel1.jpg');
-        height:100%;
+        .first-img {
+            background-image: url('/images/Carousel1.jpg');
+            height:37.5em;
+            width:100%;
+            object-fit: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
     }
 
     .second-slide {
-        background-image: url('/images/Carousel2.jpg');
-        height:100%;
+        .second-img {
+            background-image: url('/images/Carousel2.jpg');
+            height:37.5em;
+            width:100%;
+            object-fit: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
     }
 
     .third-slide {
-        background-image: url('/images/Carousel3.jpg');
-        height:100%;
+        .third-img {
+            background-image: url('/images/Carousel3.jpg');
+            height:37.5em;
+            width:100%;
+            object-fit: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
     }
 }
 
