--- a/private/css/pages/_index.scss
+++ b/private/css/pages/_index.scss
@@ -68,9 +68,12 @@
             text-align: center;
             position:absolute;
             z-index:1;
-            bottom:40%;
+            bottom:30%;
+            left:50%;
+            transform: translateX(-50%);
             margin:0 auto;
             width:150px;
+            height:40px;
             line-height: 1;
             cursor: pointer;
             vertical-align: middle;
@@ -81,6 +84,10 @@
             font-size: 0.75em;
             background-color: #588d32;
             color: #fff;
+
+            a {
+                padding-top:40px;
+            }
         }
     }
 
