--- a/private/css/components/_header.scss
+++ b/private/css/components/_header.scss
@@ -89,7 +89,7 @@ header {
     .navi-bar-wrapper {
         position:relative;
         
-        .navi-bar-dock {}
+        //.navi-bar-dock {}
 
         .navi-bar-items {
             height:54px;
