--- a/private/css/pages/_index.scss
+++ b/private/css/pages/_index.scss
@@ -1,8 +1,8 @@
 .page-index {
 
-    .carousel-wrapper {
+    //.carousel-wrapper {}
     
-    }
+    
 
     .carousel-dock {
 
@@ -50,8 +50,8 @@
         h3 {
             z-index: 1;
             position:absolute;
-            font-size: 2.5em;
-            max-width: 14em;
+            font-size: 2.85em;
+            max-width: 15em;
             margin: 0 auto;
             font-weight: 700;
             color: #fff;
@@ -72,8 +72,8 @@
             left:50%;
             transform: translateX(-50%);
             margin:0 auto;
-            width:150px;
-            height:40px;
+            //width:120px;
+            //height:28px;
             line-height: 1;
             cursor: pointer;
             vertical-align: middle;
@@ -81,13 +81,10 @@
             border-radius: .25rem;
             padding: 1.5em 2em 1.6em;
             margin: 0 0 1.5rem 0;
-            font-size: 0.75em;
             background-color: #588d32;
             color: #fff;
+            font-size:1em;
 
-            a {
-                padding-top:40px;
-            }
         }
     }
 
