--- a/private/css/pages/_index.scss
+++ b/private/css/pages/_index.scss
@@ -86,24 +86,30 @@
         }
     }
 
-    .float-div {
-        float:left;
-        height:640px;
-        width:360px;
-        margin: 2em 1em 0em 1em;
-        padding:10px;
+    .subheader-float-divs{
+        
+
+    
+        .float-div {
+            float:left;
+            height:360px;
+            width:590px;
+            margin: 3.5em 1em 0em 1em;
+            padding-left: 1.5rem;
+            padding-right: 1.5rem;
+
+            .img {
+                height:360px;
+                object-fit: cover;
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: cover;
+            }
+
+            .first-img {
+                background-image: url('/images/float1.jpg');
+            }
        
-
-        .first-div {
-            height:580px;
-            width:350px;
-            background-image: url('/images/float1.jpg');
-            object-fit: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-
         }
     }
-
 }
